# VoxLane

./: .env.example  .gitignore  README.md  compose.yaml  package-lock.json  package.json
.cursor/rules/: git-authorship.mdc
.github/workflows/: ci.yml
apps/web/: Dockerfile  next.config.ts  package-lock.json  package.json  playwright.config.ts
apps/web/e2e/: prototype.spec.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: icons.tsx  lane-experience.test.tsx  lane-experience.tsx  operator-console.tsx
apps/web/src/lib/: contracts.ts  session-client.test.ts  session-client.ts  voice-adapter.ts
docs/: ARCHITECTURE.md  GRAPHIFY_WORKFLOW.md  HARDWARE_PATH.md  PROVIDERS.md  ROADMAP.md  SECURITY_PRIVACY.md  TEST_STRATEGY.md  UX_SPEC.md
docs/adr/: 0001-prototype-boundaries.md  0002-pipecat-smallwebrtc.md  0003-deterministic-order-core.md
docs/reports/: LATENCY_TEMPLATE.md  PROTOTYPE_LATENCY.md  PROTOTYPE_STATUS.md
fixtures/audio/: manifest.example.json
fixtures/menu/: default.json
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-07-13/: .graphify_analysis.json  .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/cache/: stat-index.json
scripts/: check.ps1
services/voice-agent/: Dockerfile  main.py  pyproject.toml
services/voice-agent/tests/: test_api.py  test_domain.py  test_services.py
services/voice-agent/voice_agent/: __init__.py  app.py  config.py  domain.py  models.py  orchestrator.py  providers.py  repository.py  voice.py
(+4 files in other folders)
