[project]
name = "voice-agent"
version = "0.1.0"
description = "Kubernetica drive-thru voice and ordering backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "opentelemetry-api>=1.43.0",
    "pipecat-ai[deepgram,groq,local-smart-turn,piper,silero,webrtc]>=1.5.0",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.51.0",
]

[project.scripts]
voice-agent = "main:main"

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
